2006-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.c: Read amanda-client.conf and
				   <conf>/amanda-client.conf.

2006-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/security-util.c, common-src/tapelist.c,
	  restore-src/restore.c, server-src/amcheck.c, server-src/amindexd.c,
	  server-src/amtape.c, server-src/changer.c, server-src/driver.c,
	  server-src/planner.c, server-src/taper.c,
	  server-src/taperscan.c: Fix memory leak.

2006-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* restore-src/restore.c: Fix Adding at end of list.

2006-06-12  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/taper.c (syncpipe_putstr): Don't crash if str is NULL.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/holding.c (pick_datestamp): Fix reading user input.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* recover-src/amrecover.c (sigint_handler): Call send_command only if
						    amindexd is alive.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/util.c (connect_port): ETIMEDOUT is a fatal error.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* common-src/stream.c (stream_client_internal): Get errno set
							correctly.
	* server-src/driver.c (handle_chunker_result): Don't asserti(0) on
			      receive of a TRYAGAIN from a chunker, but set
			      chunker->result.
	* server-src/dumper.c: Try gethostbyname("localhost") before calling
			       stream_client and log appropriate message.

2006-06-09  Jean-Louis Martineau <martineau@zmanda.com>
	* server-src/amcheck.c: Report ERROR if gethostbyname("localhost")
				doesn't succeed.

2006-06-08  Jean-Louis Martineau <martineau@zmanda.com>
	* client-src/clientconf.c (add_client_conf): New function to map
						     normal option to their
						     -o equivalent.
	* client-src/clientconf.h (add_client_conf): Prototype.
	* man/xml-source/amrecover.8.xml: Document -o.